--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <head>
     <!-- Заголовок страницы в браузере -->
-    <title> Мій сайт Гор</title>
+    <title> Мій сайт Горов</title>
     <!-- Подключаем CSS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
